--- a/style.css
+++ b/style.css
@@ -103,3 +103,25 @@ p {
   text-align: center;
   font-size: 2rem;
 }
+
+@media (max-width: 1024px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2,
+  p,
+  button,
+  input {
+    font-size: 1.5rem;
+  }
+
+  input {
+    height: 3rem;
+    width: 20rem;
+  }
+
+  button {
+    height: 3rem;
+  }
+}
